[project]
name = "pyrning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all,standard]>=0.115.12",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
    "ruff>=0.11.11",
]

[tool.poe.tasks]
dev = "fastapi dev app/main.py --host 0.0.0.0 --port 8000"
